<resources>
    <string name="app_name">Examen01</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="introduce_tu_usuario">Introduce tu usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="introduce_tu_contrase_a">Introduce tu contraseña</string>
    <string name="log_in">Log in</string>
    <string name="bienvenido">¡BIENVENIDO!</string>
    <string name="ppp">...</string>
    <string name="reset">Reset</string>
</resources>